# apache-arrowtable

./: CMakeLists.txt  README.md  build.sh
ci/: build.sh
src/xml2arrowtable/: CMakeLists.txt  main.cpp  xml_to_arrowtable.cpp  xml_to_arrowtable.h
